--- a/style.css
+++ b/style.css
@@ -47,3 +47,12 @@
   font-weight: 300;
   line-height: 1.5;
 }
+
+.wrapper {
+  width: 100%;
+  max-width: 1152px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+}
